  lengthened. (RFB)

2012-09-01
- bios/screen.c bios/videl.c: Added vsync() to avoid the plane shift bug when
  changing the resolution on ST. (VRI)
- bios/ikbd.c bios/panicasm.S include/kprint.h: Now cold reset always reboot
  to the ROM OS, even with EmuTOS RAM versions.
- aes/gemfslib.c: Fix loop in file selector when mask is too long. (RFB)
- aes/gemfslib.c: Cosmetic improvement to file selector. (RFB)

2012-09-02
- aes/gemfslib.c: Code cleanup: replace static variables with dynamic. (RFB)
- aes/gemfmalt.c aes/gemfmalt: Code cleanup: eliminate unnecessary globals,
  OB_ macros, compatibility macros. (RFB)

2012-09-03
- aes/gemobjop.c: Code cleanup: eliminated OB_ & compatibility macros,
  rewrote get_par(). (RFB)
- aes/gem.def aes/gem.rsc: Changed FSTITLE marker from X to _ to avoid
  unnecessary translation requirement. (RFB)
- aes/gemlib.h aes/gemmnlib.c: Code cleanup: eliminate OB_ & compatibility
  macros. (RFB)

2012-09-05
- bios/*: Use 0x00ffxxxx instead of 0xffffxxxx to access I/O registers. (VRI)

2012-09-06
- bios/videl.c: Fix Falcon hardware palette initialisation for real Falcon
  hardware. (RFB)

2012-09-12
- bios/screen.c bios/videl.c: Fixed vsync() startup trouble. (VRI)

2012-09-13
- doc/status.txt: Updated. Contributed by Eero Tamminen. (VRI)
- vdi/vdi_defs.h vdi/vdi_text.c: Replaced copy_name() by memcpy(). Contributed
  by Eero Tamminen. (VRI)

2012-09-26
- desk/deskmain.c: Fixed buffer overflow in xlate_fix_tedinfo(). (VRI)

2012-10-01
- vdi/vdi_col.c: Quick hack to see something in TosWin2 on Falcon. (VRI)

2012-10-07
- Makefile bios/aciavecs.S bios/bios.c bios/chardev.c bios/iorec.h
  bios/mfp.c bios/mfp.h bios/serport.c bios/serport.h bios/xbios.c:
  Reorganised serial i/o code prior to adding Falcon serial i/o support. (RFB)

2012-10-09
- bios/serport.c bios/serport.h: Reformat & tidy up code. (RFB)

2012-10-10
- bios/serport.c bios/serport.h bios/xbios.c: Fix Rsconf() to return
  ULONG instead of void. (RFB)