@@ -14,6 +14,17 @@
 #define MACHINE_H
 
 /*
+ * hardware registers
+ */
+#define FALCON_HHT          0x00ff8282UL
+#define TT_PALETTE_REGS     0x00ff8400UL
+#define BLITTER_CONFIG1     0x00ff8a3cUL
+#define SYS_INT_MASK        0x00ff8e01UL
+#define SCU_GPR1            0x00ff8e09UL
+#define VME_INT_MASK        0x00ff8e0dUL
+#define DIP_SWITCHES        0x00ff9200UL
+
+/*
  * some useful cookies.
  */
 
